--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,14 @@ backend/yolo12x.pt
 backend/.venv/
 backend/dataset/
 
+
+
+.history/
+
+# ====================
+# Firebase (API Keys)
+# ====================
+frontend/firebase.json
+frontend/android/app/google-services.json
+frontend/ios/Runner/GoogleService-Info.plist
+frontend/lib/firebase_options.dart
